--- a/package.json
+++ b/package.json
@@ -24,29 +24,29 @@
     "drizzle-orm": "^0.30.7"
   },
   "devDependencies": {
+    "@eslint/js": "^9.25.1",
     "@sveltejs/adapter-node": "^5.0.1",
     "@sveltejs/kit": "^2.20.6",
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
     "@tanstack/svelte-query": "^5.28.13",
     "@types/better-sqlite3": "^7.6.9",
-    "@types/eslint": "^8.56.0",
-    "@typescript-eslint/eslint-plugin": "^7.0.0",
-    "@typescript-eslint/parser": "^7.0.0",
     "autoprefixer": "^10.4.19",
     "daisyui": "^4.9.0",
     "dotenv": "^16.4.5",
     "drizzle-kit": "^0.31.0",
-    "eslint": "^8.56.0",
-    "eslint-config-prettier": "^9.1.0",
+    "eslint": "^9.25.1",
+    "eslint-config-prettier": "^10.1.2",
     "eslint-plugin-svelte": "^3.5.1",
     "postcss": "^8.4.38",
     "prettier": "^3.1.1",
     "prettier-plugin-svelte": "^3.1.2",
     "svelte": "^5.27.1",
     "svelte-check": "^3.6.0",
+    "svelte-eslint-parser": "^1.1.3",
     "tailwindcss": "^3.4.3",
     "tslib": "^2.4.1",
     "typescript": "^5.0.0",
+    "typescript-eslint": "^8.31.1",
     "vite": "^6.3.4",
     "vitest": "^3.1.1"
   }
