--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@sveltejs/adapter-node": "^5.0.1",
     "@sveltejs/kit": "^2.20.6",
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
+    "@tailwindcss/vite": "^4.1.5",
     "@tanstack/svelte-query": "^5.28.13",
     "@types/better-sqlite3": "^7.6.9",
     "daisyui": "^5.0.35",
@@ -36,13 +37,12 @@
     "eslint": "^9.25.1",
     "eslint-config-prettier": "^10.1.2",
     "eslint-plugin-svelte": "^3.5.1",
-    "postcss": "^8.4.38",
     "prettier": "^3.1.1",
     "prettier-plugin-svelte": "^3.1.2",
     "svelte": "^5.27.1",
     "svelte-check": "^3.6.0",
     "svelte-eslint-parser": "^1.1.3",
-    "tailwindcss": "^3.4.3",
+    "tailwindcss": "^4.1.5",
     "tslib": "^2.4.1",
     "typescript": "^5.0.0",
     "typescript-eslint": "^8.31.1",
