--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "drizzle-orm": "^0.43.1"
   },
   "devDependencies": {
+    "@eslint/compat": "^1.2.9",
     "@eslint/js": "^9.25.1",
     "@sveltejs/adapter-node": "^5.0.1",
     "@sveltejs/kit": "^2.20.6",
@@ -37,11 +38,11 @@
     "eslint": "^9.25.1",
     "eslint-config-prettier": "^10.1.2",
     "eslint-plugin-svelte": "^3.5.1",
+    "globals": "^16.0.0",
     "prettier": "^3.1.1",
     "prettier-plugin-svelte": "^3.1.2",
     "svelte": "^5.27.1",
     "svelte-check": "^4.1.6",
-    "svelte-eslint-parser": "^1.1.3",
     "tailwindcss": "^4.1.5",
     "tslib": "^2.4.1",
     "typescript": "^5.0.0",
